Changed TranscriptTextUtils to TranscriptPdfParser, cleaning up lots of code. Still bugs to work out.